Put warnings about possible append bugs

--- a/Conservation.ipynb
+++ b/Conservation.ipynb
@@ -17,7 +17,14 @@
     "import simplesimdb as simplesim\n",
     "\n",
     "plt.rcParams.update({'font.size': 22})\n",
-    "pd.set_option('display.float_format', lambda x: '%.2e' % x)"
+    "pd.set_option('display.float_format', lambda x: '%.2e' % x)b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ATTENTION: possible bug introduced through wrong application of np.append method"
    ]
   },
   {
@@ -138,7 +145,8 @@
     "    #print( dset)\n",
     "    pp = json.loads( da.inputfile )\n",
     "    time = da['time'][:]\n",
-    "    timett = np.append(2*time[len(time)-1] -time[len(time)-2], time ) # extrapolate\n",
+    "    timett = np.append(time, 2*time[len(time)-1] -time[len(time)-2])\n",
+    "    # ATTENTION I swaped time and value, append just concatenates the two\n",
     "    deltat = np.diff(timett)\n",
     "    rho = da['rho'][:]\n",
     "    area = da['psi_area'][:]\n",
@@ -168,7 +176,8 @@
     "    print( f\"Average flux is { average_jvne/area[167]:1.2e} pm {sigma_jvne/area[167]:1.2e}\")\n",
     "    print( f\"Total average mass loss rate is {average_jvne:6.1f}\")\n",
     "    print( f\"Total mass gain by sources is {average_source:6.1f}\" )\n",
-    "    average_flux = np.append( average_jvne/area[167], average_flux )\n",
+    "    average_flux = np.append( average_jvne/area[167], average_flux ) \n",
+    "    #ATTENTION BUG?? it puts the value at the beginning of average_flux\n",
     "    sigma_flux = np.append( sigma_jvne/area[167], sigma_flux )\n",
     "    print( f\"particle confinement time = {average_mass/average_jvne*timescale:1.2e}\")\n",
     "    confinement_time = np.append( average_mass/average_jvne*1e-7, confinement_time )\n",
@@ -262,9 +271,7 @@
     "#     plt.plot(time[min_idx:]*timescale,divjvnepar[min_idx:], color='g', marker='',\n",
     "#              ls='--', lw = 4, label=\"parallel\")\n",
     "\n",
-    "    handles, labels = plt.gca().get_legend_handles_labels()\n",
-    "    plt.legend(handles, labels, loc='upper right',numpoints=1,ncol=2,\n",
-    "                   fontsize='medium',framealpha=0.5)\n",
+    "1\n",
     "    dset.close()\n",
     "    \n",
     "plt.xlabel(r\"$t\\ [c_s/R_0]$\")\n",
@@ -678,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
