--- a/Relative Conservation High.ipynb
+++ b/Relative Conservation High.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e40c1af4",
+   "id": "0c76bbb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e510536",
+   "id": "64b19eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2d47611b",
+   "id": "355ffdd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c172911",
+   "id": "3abf7322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1e5bb0dc",
+   "id": "89a1d560",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8c3fb5e7",
+   "id": "f10f6d1c",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9be33cc4",
+   "id": "f93f1881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d47b3166",
+   "id": "25603e60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "25e31dd7",
+   "id": "878daeca",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc86fd8",
+   "id": "c15b89a5",
    "metadata": {},
    "source": [
     "The volume element in the orthogonal grid is slightly wrong close to the separatrix:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4dba861d",
+   "id": "49475e6c",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "55de31ca",
+   "id": "e3929726",
    "metadata": {
     "scrolled": true
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fccd751",
+   "id": "03af4aa9",
    "metadata": {},
    "source": [
     "Depending on how exactly we compute the flux surface average we obtain different results"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e9a37d6b",
+   "id": "8e6f6870",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d2055b1",
+   "id": "c2a5ec99",
    "metadata": {},
    "source": [
     "The problem is also the derivative of the FSA"
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cf6a3229",
+   "id": "2edb5111",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad1652a6",
+   "id": "54b59911",
    "metadata": {},
    "source": [
     "This will generate problems when comparing quantities on the LCFS"
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6ab08457",
+   "id": "5024b5d5",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d5680281",
+   "id": "1061bf4d",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2373259a",
+   "id": "ee1a4dbd",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a56197fe",
+   "id": "60b909cc",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e6260d2b",
+   "id": "c7188210",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f330c487",
+   "id": "74aef00d",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "fa3c3149",
+   "id": "d63d8fe1",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d815f16e",
+   "id": "65ca93ba",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b3713f6b",
+   "id": "a23f3d64",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f9004ca9",
+   "id": "9958100e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "d376068b",
+   "id": "03887d16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9c755d4e",
+   "id": "3c26b0af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "0b27e772",
+   "id": "3849b951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "878da85d",
+   "id": "17d9cd67",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "a4032a84",
+   "id": "38e70111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "69307707",
+   "id": "675af486",
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "64ef7e22",
+   "id": "f5b08002",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "1d212fbc",
+   "id": "efacf0b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8b2c61ca",
+   "id": "b4e098ba",
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "40d94f23",
+   "id": "9a28f204",
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "142197d2",
+   "id": "26bb838b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1782,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "625a50fa",
+   "id": "ca7cc485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "32d9c181",
+   "id": "6cec8ff3",
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "fc211f44",
+   "id": "72883b0e",
    "metadata": {
     "scrolled": false
    },
@@ -1873,7 +1873,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e9cfbe26",
+   "id": "dfc7bf5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1931,7 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "65dea690",
+   "id": "e0cdf6f9",
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ca82d530",
+   "id": "1a666763",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b80933c",
+   "id": "b05bc518",
    "metadata": {},
    "source": [
     "### Vorticity accuracy on LCFS"
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "1f9c8f86",
+   "id": "f98ac728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "85694d7d",
+   "id": "1df0e4aa",
    "metadata": {
     "scrolled": false
    },
@@ -2127,7 +2127,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "eb9f33ab",
+   "id": "3ccf312b",
    "metadata": {
     "scrolled": true
    },
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d139374",
+   "id": "14d21c8a",
    "metadata": {},
    "source": [
     "## Ion parallel momentum"
@@ -2202,7 +2202,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "7d694962",
+   "id": "649d96da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "cd75ff5f",
+   "id": "ed0d22ef",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "cd9af0f8",
+   "id": "92704f69",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed768bd5",
+   "id": "5645d3d6",
    "metadata": {},
    "source": [
     "## Parallel electron force balance"
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "1b751bc8",
+   "id": "7c4d924c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,7 +2425,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "c9a59783",
+   "id": "22fe0f3f",
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2465,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3bec9d8a",
+   "id": "9b6378e2",
    "metadata": {},
    "outputs": [
     {
@@ -2503,7 +2503,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a89d59bf",
+   "id": "51dd6027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2563,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "cfa3d08c",
+   "id": "bd3b7213",
    "metadata": {},
    "outputs": [
     {
@@ -2603,7 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae822596",
+   "id": "f4da44d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78fc1098",
+   "id": "8184ceac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2619,7 +2619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2633,7 +2633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
