--- a/Relative Conservation High.ipynb
+++ b/Relative Conservation High.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4d81cc36",
+   "metadata": {},
+   "source": [
+    "### DEPRECATED, mark for deletion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0c76bbb1",
@@ -2619,7 +2627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2633,7 +2641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
