Fix parameters reversed source order and scale

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "3304f28b",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        " 'T_i': 77.76088568677834}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,31 +57,46 @@
    "execution_count": 3,
    "id": "a101e27a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.5e-05, 3e-05, 3.5e-05, 5e-05, 7e-05, 0.00016]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# 3e-4, 1e-4, 3e-5, 1e-5, 3e-6, 1e-6\n",
     "omega_s1 = [2e-4, 1e-4, 5e-5, 3.5e-5, 3e-5, 2.5e-5]\n",
-    "omega_s0 = [1.6e-4, 7e-5, 5e-5, 3.5e-5, 3e-5, 2.5e-5]"
+    "omega_s0 = [1.6e-4, 7e-5, 5e-5, 3.5e-5, 3e-5, 2.5e-5]\n",
+    "omega_s1.reverse()\n",
+    "omega_s0.reverse()\n",
+    "omega_s0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "12cff8f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0   -2.72e-04\n",
-       "1   -2.72e-04\n",
-       "2   -2.72e-04\n",
-       "3   -2.72e-04\n",
-       "4   -2.72e-04\n",
-       "5   -2.72e-04\n",
-       "Name: mu, dtype: float64"
+       "0   1.53e+00\n",
+       "1   1.39e+00\n",
+       "2   1.20e+00\n",
+       "3   1.30e+00\n",
+       "4   1.35e+00\n",
+       "5   2.35e+00\n",
+       "Name: omega_s0s, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +111,7 @@
     "df['omega_s0'] = omega_s0\n",
     "df['omega_s1s'] = df['omega_s1']/df['omega_0_inv']/1000\n",
     "df['omega_s0s'] = df['omega_s0']/df['omega_0_inv']/1000\n",
-    "df['mu']"
+    "df['omega_s0s']"
    ]
   },
   {
@@ -133,13 +148,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3321/3810470510.py:6: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_45428/3810470510.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_str[header] = df_str[header].apply( errorToString)\n",
-      "/tmp/ipykernel_3321/3810470510.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_45428/3810470510.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -186,43 +201,43 @@
        "      <th>1.00e-06</th>\n",
        "      <td>1.27</td>\n",
        "      <td>77.76</td>\n",
-       "      <td>9.77</td>\n",
-       "      <td>12.21</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.00e-06</th>\n",
        "      <td>0.97</td>\n",
        "      <td>44.90</td>\n",
-       "      <td>3.25</td>\n",
-       "      <td>4.64</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>1.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1.00e-05</th>\n",
        "      <td>0.72</td>\n",
        "      <td>24.59</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>1.72</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>1.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.00e-05</th>\n",
        "      <td>0.54</td>\n",
        "      <td>14.20</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.91</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>1.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1.00e-04</th>\n",
        "      <td>0.40</td>\n",
        "      <td>7.78</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.58</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>1.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.00e-04</th>\n",
        "      <td>0.31</td>\n",
        "      <td>4.49</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>0.37</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>2.93</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,12 +246,12 @@
       "text/plain": [
        "         $B_0/$T $T_e/$eV $\\omega_s^0 / $kHz $\\omega_s^1 / $kHz\n",
        "$\\eta$                                                         \n",
-       "1.00e-06    1.27    77.76               9.77              12.21\n",
-       "3.00e-06    0.97    44.90               3.25               4.64\n",
-       "1.00e-05    0.72    24.59               1.72               1.72\n",
-       "3.00e-05    0.54    14.20               0.91               0.91\n",
-       "1.00e-04    0.40     7.78               0.58               0.58\n",
-       "3.00e-04    0.31     4.49               0.37               0.37"
+       "1.00e-06    1.27    77.76               1.53               1.53\n",
+       "3.00e-06    0.97    44.90               1.39               1.39\n",
+       "1.00e-05    0.72    24.59               1.20               1.20\n",
+       "3.00e-05    0.54    14.20               1.30               1.30\n",
+       "1.00e-04    0.40     7.78               1.35               1.93\n",
+       "3.00e-04    0.31     4.49               2.35               2.93"
       ]
      },
      "execution_count": 6,
@@ -952,7 +967,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -966,7 +981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
